# fish_hpurv_custom

./: CMakeLists.txt  package.xml
launch/: display.launch.py
models/fish_hpurv/: fish.sdf
scripts/: CaudalForcePlugin.cpp  astar_planner_node.cpp  force_dynamic_plugin.cpp  hpurv_dynamics_node.cpp  joint_publisher.cpp
urdf/: fish_hpurv.sdf  fish_hpurv.urdf  fish_hpurv_macro.urdf.xacro
worlds/: fish_world.world
